--- a/src/Components/HomPageComp/Css Files/EditorialUrban.css
+++ b/src/Components/HomPageComp/Css Files/EditorialUrban.css
@@ -4,8 +4,8 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif&display=swap");
 
 .Editorial-Heading {
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
   color: #ec2121;
   font-family: "PT Serif";
   margin-top: 60px;
@@ -32,18 +32,28 @@
   color: black;
   font-weight: 700;
   font-family: "Merriweather";
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
 .Urban-text-left {
   font-size: 18px;
   font-weight: 300;
   font-family: "Merriweather Sans";
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 8;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
 .Editorial-image-container {
   display: flex;
   gap: 20px;
-  position: relative; /* Set relative positioning for the container */
+
   overflow: hidden; /* Prevent overflow on hover */
   transition: transform 0.3s ease; /* Smooth zoom effect */
 }
@@ -114,13 +124,20 @@
 
 .Urban-Content {
   flex: 1; /* Take the remaining space */
+  overflow: hidden;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  padding-top: 10px;
 }
 
 .Urban-title {
   color: black;
   font-size: 40px;
   font-family: "Merriweather";
-  margin-top: -1px;
+
   font-weight: 600;
   transition: color 0.3s ease; /* Smooth color transition */
 }
@@ -133,6 +150,10 @@
 .Urban-text {
   color: black;
   font-family: "Oswald", sans-serif;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
 }
 
 .Urban-date {
@@ -162,6 +183,15 @@
 }
 
 /* Responsive Styles */
+@media (max-width: 1680px) {
+  .Editorial-image-container {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    overflow: hidden; /* Prevent overflow on hover */
+    transition: transform 0.3s ease; /* Smooth zoom effect */
+  }
+}
 @media (max-width: 768px) {
   .Editorial-Container {
     flex-direction: column; /* Stack content vertically */
