--- a/src/Components/HomPageComp/Css Files/RecentNews.css
+++ b/src/Components/HomPageComp/Css Files/RecentNews.css
@@ -1,17 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
 
 .Recent-news-heading {
-  margin-left: 10%;
+  margin-left: 5%;
   margin-top: 2%;
   color: #ec2121;
-  font-family: "Oswald", sans-serif;
-  font-weight: 500;
+  font-family: "PT Serif";
 }
 
 .Recent-news-row {
   display: flex;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
   margin-top: -10px;
   overflow-x: auto; /* Enable horizontal scrolling */
   white-space: nowrap; /* Prevent wrapping of items */
@@ -57,9 +56,9 @@
 
 .styled-hr {
   display: block; /* Ensure it behaves as a block-level element */
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 80%;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 90%;
   margin-top: -0.01%;
   border: none; /* Remove default border */
   height: 2px; /* Set height of the line */
