--- a/src/Components/HomPageComp/Css Files/CityAndArticles.css
+++ b/src/Components/HomPageComp/Css Files/CityAndArticles.css
@@ -102,6 +102,7 @@
 .Article-Content {
   flex: 1; /* Take the remaining space */
   margin-top: -50px;
+  padding-bottom: 10px;
 }
 
 .Article-title {
