--- a/src/Components/HomPageComp/Css Files/Velocity.css
+++ b/src/Components/HomPageComp/Css Files/Velocity.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;900&family=Oswald:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=PT+Serif&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap");
 
 .Velocity-Heading {
   padding-left: 5%;
   padding-right: 5%;
+  font-size: 20px;
   color: #ec2121;
   font-family: "PT Serif";
   margin-top: 60px;
@@ -29,22 +31,11 @@
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; /* Smooth transition for hover effect */
 }
 
-/* Hover effect for the Velocity-item */
-.Velocity-item:hover {
-  transform: translateY(-5px); /* Lift the item slightly */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a soft shadow */
-}
-
 .Velocity-image {
   width: 100%;
   height: 250px;
   object-fit: cover;
   transition: transform 0.3s ease-in-out; /* Smooth transition for image hover effect */
-}
-
-/* Scale the image slightly on hover */
-.Velocity-item:hover .Velocity-image {
-  transform: scale(1.05);
 }
 
 .Velocity-text-overlay {
@@ -63,11 +54,9 @@
 }
 
 .Velocity-text {
-  margin-top: -10px;
-  font-family: "Oswald", sans-serif;
-  font-size: 35px;
-  font-weight: 300;
-
+  margin-top: 10px;
+  font-family: "Merriweather", sans-serif;
+  font-size: 30px;
   width: 100%;
 }
 
