--- a/src/Components/siteheader.css
+++ b/src/Components/siteheader.css
@@ -37,7 +37,7 @@
 
 .icon {
   font-size: 1rem;
-  color: #666;
+  color: black;
 }
 
 .subscribe-btn,
@@ -77,6 +77,7 @@
 .logo {
   width: 120%;
   height: 100px;
+  color: black;
 }
 
 .Banner-Container {
