--- a/src/Components/HomPageComp/Css Files/CityAndArticles.css
+++ b/src/Components/HomPageComp/Css Files/CityAndArticles.css
@@ -8,10 +8,7 @@
 }
 
 .Styled-hr {
-  border: 0;
-  height: 2px;
-  width: 100%;
-  background: #ccc;
+  border: solid 2px grey;
 }
 
 .City-Container {
