--- a/src/Components/HomPageComp/Css Files/CoverStory.css
+++ b/src/Components/HomPageComp/Css Files/CoverStory.css
@@ -46,7 +46,13 @@
   object-fit: cover;
   transition: opacity 0.3s ease;
 }
-
+.Cover-Story-Title-Overlay {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+}
 .Cover-Story-text-overlay {
   position: absolute;
   bottom: 0%;
@@ -54,14 +60,14 @@
   width: 100%;
   color: white;
   background: rgba(0, 0, 0, 0.5);
-  padding: 40px;
+  padding: 40px 40px;
   box-sizing: border-box;
   text-align: left;
   transition: background 0.3s ease;
   max-height: 350px;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 5;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
 }
@@ -127,6 +133,10 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+.Side-cover-story-author {
+  font-size: 15px;
+  color: black;
 }
 
 /* Responsive Styles */
