--- a/src/Components/HomPageComp/Css Files/Oneonone.css
+++ b/src/Components/HomPageComp/Css Files/Oneonone.css
@@ -16,7 +16,9 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+.OneonOne-story-interviewee {
+  font-size: 15px;
+}
 .Styled-hr {
   border-width: 5px;
   background: linear-gradient(to right, red 10%, black 10%);
@@ -43,7 +45,7 @@
 /* Main Container */
 .OneonOne-Container {
   display: flex;
-  justify-content: space-evenly;
+  height: 100%;
   margin-top: 20px;
   flex-wrap: wrap; /* Allow items to wrap */
 }
@@ -60,17 +62,16 @@
 .OneonOne-image-container {
   margin-top: 10px;
   position: relative;
-  width: 50%;
+  width: 30%;
   overflow: hidden; /* Prevent image overflow on hover */
   transition: transform 0.3s ease; /* Smooth zoom effect */
-  height: 460px; /* Fixed height for consistency */
 }
 
 .OneonOne-image {
   width: 100%;
-  height: 100%; /* Fill the container */
   object-fit: cover;
   transition: opacity 0.3s ease; /* Smooth opacity transition */
+  height: 450px;
 }
 
 .OneonOne-image-container:hover .OneonOne-image {
@@ -79,12 +80,12 @@
 
 /* Additional Content */
 .OneonOne-additional-content {
-  width: 50%;
+  width: 70%;
   color: black;
   padding: 20px;
   box-sizing: border-box;
   transition: transform 0.3s ease; /* Add a transition for text */
-  height: 300px; /* Fixed height for consistency */
+
   flex-direction: column; /* Column layout */
   justify-content: space-between; /* Space items */
 }
@@ -118,7 +119,22 @@
   color: black;
   transition: color 0.3s ease; /* Smooth color transition */
 }
-
+@media (max-width: 1024px) {
+  .OneonOne-image {
+    width: 100%;
+    object-fit: cover;
+    transition: opacity 0.3s ease; /* Smooth opacity transition */
+    height: 500px;
+  }
+}
+@media (max-width: 1280px) {
+  .OneonOne-image {
+    width: 100%;
+    object-fit: cover;
+    transition: opacity 0.3s ease; /* Smooth opacity transition */
+    height: 500px;
+  }
+}
 /* Responsive Styling */
 @media (max-width: 768px) {
   .OneonOne-Container {
