--- a/src/PagesCss/DetailPage.css
+++ b/src/PagesCss/DetailPage.css
@@ -2,9 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&=swap");
 
 .detail-page {
-  max-width: 800px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 0% 25%;
   font-family: Arial, sans-serif;
 }
 
